Try avoiding white space being eaten after commas.
git-svn-id: https://svn.r-project.org/R/trunk@53143 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/share/texmf/tex/latex/Rd.sty
+++ b/share/texmf/tex/latex/Rd.sty
@@ -207,13 +207,13 @@
 \def\codedash{-\discretionary{}{}{}}
 \def\Rd@code#1{\normalfont\texttt{#1}\egroup}
 
-\def\AsIs{\bgroup\let\do\@makeother\Rd@AsIs@dospecials\@noligs\Rd@AsIsX}
+\def\AsIs{\bgroup\let\do\@makeother\Rd@AsIs@dospecials\@noligs\@vobeyspaces\Rd@AsIsX}
 \def\Rd@AsIs@dospecials{\do\$\do\&\do\#\do\^\do\_\do\%\do\~}
 \def\Rd@AsIsX#1{\normalfont #1\egroup}
 \let\command=\code
 \let\env=\code
 
-\newcommand\samp{`\bgroup\@noligs\@sampx}
+\newcommand\samp{`\bgroup\@noligs\@vobeyspaces\@sampx}
 \def\@sampx#1{{\normalfont\texttt{#1}}\egroup'}
 \let\option=\samp
 
