--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -927,12 +927,9 @@ extra files into your intended @R{} source directory, e.g.@:
 @file{C:/R}. The directory name @emph{should not contain spaces}. We
 will call this directory @file{@var{R_HOME}} below.
 
-For a 64-bit build you will need a 64-bit toolchain (not currently
-contained in @file{Rtools212.exe}) and the appropriate 64-bit version of
-Tcl/Tk packaged as
-@url{http://www.stats.ox.ac.uk/@/pub/@/Rtools/@/R64a_Tcl_8-5-8.zip}:
-unpack this in @file{@var{R_HOME}}.
-
+For a 64-bit build you will need a 64-bit toolchain
+and the appropriate 64-bit version of
+Tcl/Tk: both of these are now contained in @file{Rtools212.exe}.
 
 @node Getting the source files, Building the core files, Getting the tools, Building from source
 @subsection Getting the source files
@@ -983,11 +980,9 @@ manual build you will also need
 @c @file{@var{R_HOME}/@/src/@/gnuwin32/@/unicode}.
 
 @item
-The Tcl/Tk support files are in a zip file at
-@uref{http://www.stats.ox.ac.uk/@/pub/@/Rtools/}: unzip this in
-@var{R_HOME}, and it will add directory tree @file{@var{R_HOME}/Tcl}.
-Please make sure you get the right version: there is a 32-bit version
-and two 64-bit versions (for R 2.11.x and 2.12.x).
+The Tcl/Tk support files are contained in @file{Rtools*.exe}.
+Please make sure you install the right version: there is a 32-bit version
+and a 64-bit version.  
 
 @item
 You need @code{libpng}, @code{jpeg} and @code{libtiff} sources
@@ -4454,7 +4449,9 @@ Your @env{PATH} may include @file{.} first, then the @file{bin}
 directories of the tools, the compiler toolchain and @LaTeX{}.  Do not
 use filepaths containing spaces: you can always use the short forms
 (found by @code{dir /x} at the Windows command line).  Network shares
-(with paths starting @code{\\}) are not supported.  For example, all on
+(with paths starting @code{\\}) are not supported.
+
+For example, all on
 one line,
 
 @smallexample
@@ -4465,9 +4462,13 @@ PATH=c:\Rtools\bin;c:\Rtools\perl\bin;c:\Rtools\MinGW\bin;c:\MiKTeX\miktex\bin;
 It is essential that the directory containing the command line tools
 comes first or second in the path: there are typically like-named
 tools@footnote{such as @command{sort}, @command{find} and
-@command{make}.} in other directories, and they will @strong{not} work.
-The ordering of the other directories is less important, but if in
-doubt, use the order above.
+@command{make}.} in other directories, and they will @strong{not}
+work. The ordering of the other directories is less important, but if
+in doubt, use the order above.  If you install both the 32 bit and 64
+bit toolchains from @file{Rtools*.exe}, it should work to list both in
+the path (as the automatic installer does), but we recommend only
+including the one that you plan to use.  Other toolchains are more
+likely to conflict.
 
 Our toolset contains copies of Cygwin DLLs that may conflict with other
 ones on your system if both are in the path at once.  The normal
@@ -4611,7 +4612,8 @@ with the import libraries in @file{lib/gcc/mingw32/4.5.0} moved to a
 subdirectory @file{dlls} so that @file{libgfortran} and @file{libstdc++}
 are linked statically.
 
-We have also tested using the 32-bit toolchain from the @code{mingw-w64}
+The @file{Rtools212.exe} collection also includes 
+the 32-bit toolchain from the @code{mingw-w64}
 project (which are currently using pre-releases of @command{gcc 4.5.2})
 and options to use that are documented in file @file{MkRules.dist}.
 
@@ -4619,7 +4621,7 @@ and options to use that are documented in file @file{MkRules.dist}.
 @subsection 64-bit toolchain
 
 Several versions of the MinGW-w64 toolchain are available: use one of
-them to replace the 32-bit toolchain's @file{bin} directory in your
+them to replace (or supplement) the 32-bit toolchain's @file{bin} directory in your
 path.  Then copy file @file{src/gnuwin32/MkRules.dist} to
 @file{src/gnuwin32/MkRules.local} and edit it to set @code{WIN=64} and
 @code{BINPREF64} and @code{SYMPAT64} appropriate to your toolchain, then
@@ -4633,8 +4635,7 @@ unless @option{--no-test-load} is used.}  This comes from
 @url{http://sourceforge.net/@/projects/@/mingw-w64/@/files/@/Toolchains%20targetting%20Win64/@/Automated%20Builds/}
 and has a name like @file{mingw-w64-1.0-bin_i686-mingw_20100917.zip}.
 However, this has been patched to use static Fortran and C++ runtime
-libraries: a suitable toolchain can be found at
-@url{http://www.stats.ox.ac.uk/@/pub/@/Rtools/@/Win64No_toolchain.zip}.
+libraries: a suitable toolchain is included in @file{Rtools212.exe}.
 
 @strong{NB:} toolchains after late April 2010 at that site generate
 objects with symbols without a leading underscore.  Other toolchains
