add _R_CHECK_SKIP*_ARCH_ pkg check options
git-svn-id: https://svn.r-project.org/R/trunk@53221 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-ints.texi
+++ b/doc/manual/R-ints.texi
@@ -3506,6 +3506,18 @@ Default: true.
 @item _R_CHECK_ASCII_DATA_
 If true, check data for non-ascii characters.
 Default: true.
+@item _R_CHECK_SKIP_ARCH_
+Comma-separated list of architectutes that will be omitted from
+checking in a multi-arch setup.
+Default: none.
+@item _R_CHECK_SKIP_TESTS_ARCH_
+Comma-separated list of architectutes that will be omitted from
+running tests in a multi-arch setup.
+Default:none.
+@item _R_CHECK_SKIP_EXAMPLES_ARCH_
+Comma-separated list of architectutes that will be omitted from
+running examples in a multi-arch setup.
+Default:none.
 @end vtable
 
 @node R coding standards, Testing R code, Tools, Top
