protect va_list when including C header in C++
git-svn-id: https://svn.r-project.org/R/trunk@53253 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -9016,6 +9016,10 @@ The function @code{REprintf} is similar but writes on the error stream
 output stream.  Functions @code{Rvprintf} and @code{REvprintf} are
 analogues using the @code{vprintf} interface.
 
+Because @code{Rvprintf} and @code{REvprintf} use a C99 interface, they
+are only defined by @file{R_ext/Print.h} in C++ code if the macro
+@code{R_USE_C99_IN_CXX} is defined when it is included.
+
 @menu
 * Printing from FORTRAN::
 @end menu
