--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -1666,17 +1666,19 @@ using @code{R CMD check} prior to invoking the build procedure.
 
 To exclude files from being put into the package, one can specify a list
 of exclude patterns in file @file{.Rbuildignore} in the top-level source
-directory.  These patterns should be Perl regexps, one per line, to be
+directory.  These patterns should be Perl-like regexps (see the help for
+@code{regexp} in @R{} for the precise details), one per line, to be
 matched against the file names relative to the top-level source
 directory.  In addition, directories from source control
 systems@footnote{called @file{CVS} or @file{.svn} or @file{.arch-ids} or
-@file{.bzr} or @file{.git} or @file{.hg}.}, directories with names ending
-@file{.Rcheck} or @file{Old} or @file{old} and files @file{GNUMakefile},
-@file{Read-and-delete-me} or with base names starting with @samp{.#}, or
-starting and ending with @samp{#}, or ending in @samp{~}, @samp{.bak} or
-@samp{.swp}, are excluded by default.  In addition, those files in the
-@file{R}, @file{demo} and @file{man} directories which are flagged by
-@code{R CMD check} as having invalid names will be excluded.
+@file{.bzr} or @file{.git} or @file{.hg}.}, directories with names
+ending @file{.Rcheck} or @file{Old} or @file{old} and files
+@file{GNUMakefile}, @file{Read-and-delete-me} or with base names
+starting with @samp{.#}, or starting and ending with @samp{#}, or ending
+in @samp{~}, @samp{.bak} or @samp{.swp}, are excluded by default.  In
+addition, those files in the @file{R}, @file{demo} and @file{man}
+directories which are flagged by @code{R CMD check} as having invalid
+names will be excluded.
 
 Use @kbd{R CMD build --help} to obtain more information about the usage
 of the @R{} package builder.
@@ -1707,6 +1709,10 @@ built tarball as a final check on the contents.
 @code{R CMD build} can also build pre-compiled version of packages for
 binary distributions, but @code{R CMD INSTALL --build} is preferred (and
 is considerably more flexible).
+
+Note that prior to @R{} 2.13.0, @code{R CMD build} did some cleaning in
+the supplied source directory, but this was undocumented and is no
+longer done.
 
 @node Writing package vignettes, Submitting a package to CRAN, Checking and building packages, Creating R packages
 @section Writing package vignettes
@@ -1745,7 +1751,7 @@ PDF version in the package sources it is not necessary that the
 vignettes can be compiled at install time, i.e., the package author can
 use private @LaTeX{} extensions which are only available on his
 machine.@footnote{provided the conditions of the package's licence are
-met: many would see this as incompatible with an Open Source licence.}
+met: many would see these as incompatible with an Open Source licence.}
 
 By default @code{R CMD build} will run @code{Sweave} on all files in
 Sweave format.  If no @file{Makefile} is found in directory
